--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -29,6 +29,8 @@
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
+    "dayjs": "^1.11.3",
+    "html5-qrcode": "^2.2.1",
     "moment": "2.29.1",
     "next": "10.0.6",
     "next-compose-plugins": "2.2.1",
@@ -45,5 +47,8 @@
     "react-dom": "17.0.1",
     "reactstrap": "8.9.0",
     "webpack": "4.44.1"
+  },
+  "devDependencies": {
+    "lint": "^0.7.0"
   }
 }
