Replace html5-qrcode by Quagga Library

--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -30,7 +30,6 @@
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
     "dayjs": "^1.11.3",
-    "html5-qrcode": "^2.2.1",
     "moment": "2.29.1",
     "next": "10.0.6",
     "next-compose-plugins": "2.2.1",
@@ -40,6 +39,7 @@
     "node-sass-package-importer": "5.3.2",
     "nouislider": "14.6.3",
     "path": "0.12.7",
+    "quagga": "^0.12.1",
     "react": "17.0.1",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
