--- a/nuapp-api/package.json
+++ b/nuapp-api/package.json
@@ -24,10 +24,12 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/throttler": "^2.0.1",
     "dotenv": "^16.0.1",
     "helmet": "^5.1.0",
+    "mongoose": "^6.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
