--- a/nuapp-api/package.json
+++ b/nuapp-api/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/throttler": "^2.0.1",
+    "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "helmet": "^5.1.0",
     "mongoose": "^6.4.2",
