--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
+    "@reduxjs/toolkit": "^1.8.3",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-sass": "1.0.1",
     "bootstrap": "4.6.0",
@@ -45,10 +46,13 @@
     "react-copy-to-clipboard": "5.0.3",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.1",
+    "react-redux": "^8.0.2",
     "reactstrap": "8.9.0",
+    "redux": "^4.2.0",
     "webpack": "4.44.1"
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "lint": "^0.7.0"
   }
 }
