Add daily bills records

--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -20,7 +20,7 @@
     "minify:scss": "node-sass --importer node_modules/node-sass-package-importer/dist/cli.js assets/scss/nextjs-argon-dashboard.scss assets/css/nextjs-argon-dashboard.min.css --output-style compressed",
     "map:scss": "node-sass --importer node_modules/node-sass-package-importer/dist/cli.js assets/scss/nextjs-argon-dashboard.scss assets/css/nextjs-argon-dashboard.css --source-map true",
     "build:scss": "npm run compile:scss && npm run minify:scss && npm run map:scss",
-    "dev": "next dev"
+    "start:dev": "next dev"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
