--- a/nuapp-api/package.json
+++ b/nuapp-api/package.json
@@ -30,10 +30,12 @@
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "helmet": "^5.1.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
