--- a/nuapp-api/package.json
+++ b/nuapp-api/package.json
@@ -9,8 +9,9 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "copy-resources": "ts-node scripts/copy-resources.ts",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npm run copy-resources && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -23,18 +24,30 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.1.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/throttler": "^2.0.1",
+    "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "helmet": "^5.1.0",
+    "js-yaml": "^4.1.0",
     "moment": "^2.29.4",
     "mongoose": "^6.4.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.9",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
