Revert "user module"
This reverts commit 47d27ab80cfb37a674724ded15940b4f54bddae2.

--- a/nuapp-api/tsconfig.json
+++ b/nuapp-api/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "typeRoots": ["node_modules/@types"],
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -17,8 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "moduleResolution": "node"
-  },
-  "include": ["src/**/*", "**/*spec.ts", "e2e/setup.test.js"]
+    "noFallthroughCasesInSwitch": false
+  }
 }
