--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "@coreui/react": "^4.3.1",
     "@coreui/react-chartjs": "^2.1.0",
     "@coreui/utils": "^1.3.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.2.3",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.1",
