--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^3.9.1",
     "classnames": "^2.3.1",
     "core-js": "^3.24.1",
+    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "quagga": "^0.12.1",
