--- a/nuapp-api/.env-example
+++ b/nuapp-api/.env-example
@@ -1,5 +1,4 @@
-PORT=3001
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_NAME=nuapp-db
-DATABASE_URI
+PORT=
+DATABASE_URI=
+SECRET_KEY=
+NODE_ENV='development'
