--- a/nuapp-api/package.json
+++ b/nuapp-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "start:dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "start:dev": "concurrently \"npx tsc --watch\" \"pm2 start dist/index.js\""
   },
   "keywords": [],
   "author": "",
