--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -55,6 +55,7 @@
     "auto-changelog": "~2.4.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
     "prettier": "2.7.1",
     "react-scripts": "5.0.1",
