--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -47,7 +47,19 @@
     "redux": "4.2.0",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^2.4.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -61,6 +73,7 @@
     "prettier": "2.7.1",
     "react-scripts": "5.0.1",
     "sass": "^1.54.4",
+    "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
   "engines": {
