--- a/nuapp-web/public/manifest.json
+++ b/nuapp-web/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "CoreUI-React",
-  "name": "CoreUI-React sample",
+  "short_name": "Nuapp",
+  "name": "Nuapp",
   "icons": [
     {
-      "src": "./assets/img/favicon.png",
-      "sizes": "100x100",
-      "type": "image/png"
+      "src": "favicon.ico",
+      "sizes": "16x16",
+      "type": "image/x-icon"
     }
   ],
   "start_url": ".",
