--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -37,6 +37,7 @@
     "classnames": "^2.3.1",
     "core-js": "^3.24.1",
     "dayjs": "^1.11.7",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "is-online": "^10.0.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
@@ -44,6 +45,8 @@
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
+    "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "4.2.0",
