--- a/nuapp-web/.env
+++ b/nuapp-web/.env
@@ -1,4 +1,4 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
-REACT_APP_BASE_URL=http://localhost:3001
-#REACT_APP_BASE_URL=https://nuapp-api.onrender.com
+#REACT_APP_BASE_URL=http://localhost:3001
+REACT_APP_BASE_URL=https://nuapp-api.onrender.com
