--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@coreui/coreui-free-react-admin-template",
   "version": "4.4.0",
-  "description": "CoreUI Free React Admin Template",
-  "homepage": ".",
+  "description": "Nuapp",
+  "homepage": "./build/",
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
