--- a/nuapp-web/.gitignore
+++ b/nuapp-web/.gitignore
@@ -9,7 +9,7 @@ yarn.lock
 /coverage
 
 # production
-# /build
+/build
 
 # misc
 .eslintcache
@@ -19,6 +19,7 @@ yarn.lock
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
