--- a/nuapp-api/package.json
+++ b/nuapp-api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "debug": "concurrently \"npx tsc --watch\" \"node --watch --inspect dist/index.js\"",
     "start:dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "keywords": [],
