--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -31,6 +31,7 @@
     "@coreui/react": "^4.3.1",
     "@coreui/react-chartjs": "^2.1.0",
     "@coreui/utils": "^1.3.1",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.2.3",
     "chart.js": "^3.9.1",
