--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -68,6 +68,7 @@
     "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
