Add shortcut to charge and bill

--- a/quente-desktop/public/manifest.json
+++ b/quente-desktop/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Nuapp",
-  "name": "Nuapp",
+  "short_name": "Quente",
+  "name": "Quente",
   "icons": [
     {
       "src": "favicon.ico",
