--- a/nuapp-web/package.json
+++ b/nuapp-web/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.4",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.49.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "4.2.0",
