--- a/quente-ui/web/package.json
+++ b/quente-ui/web/package.json
@@ -32,6 +32,8 @@
     "classnames": "^2.3.1",
     "core-js": "^3.24.1",
     "dayjs": "^1.11.7",
+    "dexie": "^4.0.1",
+    "dexie-react-hooks": "^1.1.7",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "is-online": "^10.0.0",
     "moment": "^2.29.4",
