Add item form details

--- a/quente-mobile/package.json
+++ b/quente-mobile/package.json
@@ -43,6 +43,7 @@
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-vision-camera": "^4.5.2",
     "react-native-webview": "^13.10.3",
