--- a/quente-mobile/package.json
+++ b/quente-mobile/package.json
@@ -44,6 +44,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-select-dropdown": "^4.0.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-vision-camera": "^4.5.2",
     "react-native-webview": "^13.10.3",
@@ -61,6 +62,7 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/base-64": "^1.0.2",
     "@types/react": "^18.2.6",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
     "@types/uuid": "^10.0.0",
     "babel-jest": "^29.6.3",
