--- a/quente-ui/web/package.json
+++ b/quente-ui/web/package.json
@@ -35,6 +35,7 @@
     "dexie": "^4.0.1",
     "dexie-react-hooks": "^1.1.7",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "hexoid": "^2.0.0",
     "is-online": "^10.0.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
