--- a/quente-mobile/package.json
+++ b/quente-mobile/package.json
@@ -27,6 +27,7 @@
     "expo-localization": "~14.8.3",
     "expo-status-bar": "~1.11.1",
     "geolib": "^3.3.4",
+    "hexoid": "^2.0.0",
     "i18n-js": "^4.4.3",
     "mobx-react-lite": "^4.0.5",
     "mobx-state-tree": "^5.4.1",
